Package: aroma.core
===================

Version: 2.4.7 [2012-03-01]
o Preparing to support multiple-chromosome RawGenomicSignals.
o ROBUSTNESS: Added system tests for RawGenomicSignals classes.
o CLEANUP: Now R CMD check no longer reports that the package
  is using .Internal() function calls.  This was due to how we
  adjusted colSums() and colMeans() to become generic functions.


Version: 2.4.6 [2012-02-04]
o Created ChromosomeExplorer v3.4, which should work on even more
  browsers.
o GENERALIZATION: Now binnedSmoothing() of RawGenomicSignals default to
  generate the same target bins as binnedSmoothing() of a numeric vector.
  Before the bins had to be specified explicitly by the caller.
o GENERALIZATION: Now it is possible to call colBinnedSmoothing() with
  an empty set of input loci, but still requesting a set of output loci,
  which then will be all missing values.
o BUG FIX: Argument 'x' of colBinnedSmoothing() would default to the
  incorrect number of loci.


Version: 2.4.5 [2012-02-03]
o GENERALIZATION: As ChromosomeExplorer v3.3, the new ArrayExplorer v3.3
  works with most common web browsers. See below.  However, we still
  have problems getting ArrayExplorer to load the main spatil (PNG) image
  in Internet Explorer.
o Forgot to include require.js in v2.4.4, which is needed by the
  ChromosomeExplorer v3.3.


Version: 2.4.4 [2012-02-01]
o GENERALIZATION: The new ChromosomeExplorer v3.3 will work with most
  commonly used web browsers including Mozilla Firefox, Google Chrome,
  Microsoft Internet Explorer and Apple Safari.  This far it has been
  tested with the following browsers: Firefox v3.6/v9.01/v10.0, 
  Chrome v17.0, IE v7.x/v9.0, and Safari 5.
  NOTE: To update an existing ChromosomeExplorer report, call
  setup(ce, force=TRUE) where 'ce' is your ChromosomeExplorer object.
  Thanks to Keith Ching at ConsultChing for the initial troubleshooting
  [http://consultching.com/root/?p=64] leading me on the right track 